--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: DisVar
 Title: Find Diseases from the VCF File
-Version: 1.0.0
+Version: 1.1.0
 Authors@R: 
-    person("Khunanon", "Chanasongkhram", , "6210210016@psu.ac.th", role = c("aut", "cre"),
+    person("Khunanon", "Chanasongkhram", , "chanasongkhram.k@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-5898-4183"))
 Description: This package provides a function for finding diseases from a VCF file by comparing the variants in the VCF file with those in various databases.
 License: MIT + file LICENSE
