--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Depends: 
     R (>= 2.10)
+Imports: data.table, dplyr, sqldf
 LazyData: true
+LazyDataCompression: xz
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
