--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: DisVar
 Title: Find Diseases from the VCF File
-Version: 1.1.0
+Version: 1.1.2
 Authors@R: 
     person("Khunanon", "Chanasongkhram", , "chanasongkhram.k@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-5898-4183"))
-Description: This package provides a function for finding diseases from a VCF file by comparing the variants in the VCF file with those in various databases.
+Description: a function for finding diseases from a VCF file by comparing the variants in the VCF file with those in various databases.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -14,6 +14,3 @@ Depends:
 Imports: data.table, dplyr, sqldf
 LazyData: true
 LazyDataCompression: xz
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
