--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: DisVar
 Title: Find Diseases from the VCF File
-Version: 1.1.2
+Version: 1.1.3
 Authors@R: 
     person("Khunanon", "Chanasongkhram", , "chanasongkhram.k@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-5898-4183"))
@@ -14,3 +14,7 @@ Depends:
 Imports: data.table, dplyr, sqldf
 LazyData: true
 LazyDataCompression: xz
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
