Update package DisVar1.1.4 +fix all warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,7 @@ import(dplyr)
 import(sqldf)
 importFrom(data.table,fread)
 importFrom(data.table,setDT)
+importFrom(stats,setNames)
+importFrom(utils,data)
+importFrom(utils,install.packages)
+importFrom(utils,write.table)
