--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: DisVar
 Title: Find Diseases from the VCF File
-Version: 1.1.3
+Version: 1.1.4
 Authors@R: 
     person("Khunanon", "Chanasongkhram", , "chanasongkhram.k@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-5898-4183"))
-Description: a function for finding diseases from a VCF file by comparing the variants in the VCF file with those in various databases.
+Description: A function for finding diseases from a vcf file by comparing the variants in the VCF file with those in various databases.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Depends: 
     R (>= 2.10)
-Imports: data.table, dplyr, sqldf
-LazyData: true
+Imports: data.table, dplyr, sqldf, stats, utils
+LazyData: TRUE
 LazyDataCompression: xz
 Suggests: 
     knitr,
