--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,19 @@
 Package: DisVar
 Title: Find Diseases from the VCF File
-Version: 1.1.6
+Version: 1.2.0
 Authors@R: 
     person("Khunanon", "Chanasongkhram", , "chanasongkhram.k@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-5898-4183"))
-Description: A function for finding diseases from a vcf file by comparing the variants in the VCF file with those in various databases.
+Description: A comprehensive tool for identifying disease-associated variants 
+    from VCF files by comparing against multiple genetic databases. 
+    Provides efficient variant matching, statistical analysis, 
+    and visualization of genetic associations.
 License: MIT LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Depends: 
-    R (>= 2.10)
+    R (>= 4.0.0)
 Imports: data.table, dplyr, sqldf, stats, utils
 LazyData: TRUE
 LazyDataCompression: xz
