--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Depends: 
     R (>= 4.0.0)
-Imports: data.table, dplyr, sqldf, stats, utils
+Imports: data.table, dplyr, sqldf, stats, utils, ggplot2, wesanderson
 LazyData: TRUE
 LazyDataCompression: xz
 Suggests: 
