--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ import(sqldf)
 import(wesanderson)
 importFrom(data.table,fread)
 importFrom(data.table,setDT)
+importFrom(stats,reorder)
 importFrom(stats,setNames)
 importFrom(utils,data)
 importFrom(utils,install.packages)
