--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: DisVar
 Title: Find Diseases from the VCF File
-Version: 1.2.0
+Version: 1.2.1
 Authors@R: 
     person("Khunanon", "Chanasongkhram", , "chanasongkhram.k@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-5898-4183"))
@@ -8,7 +8,7 @@ Description: A comprehensive tool for identifying disease-associated variants
     from VCF files by comparing against multiple genetic databases. 
     Provides efficient variant matching, statistical analysis, 
     and visualization of genetic associations.
-License: MIT LICENSE
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
